--- a/remotion-video/package.json
+++ b/remotion-video/package.json
@@ -4,7 +4,7 @@
 	"description": "My Remotion video",
 	"scripts": {
 		"start": "remotion preview src/index.tsx",
-		"build": "./build.sh",
+		"build": "remotion render src/index.tsx Video out.mp4",
 		"upgrade": "remotion upgrade",
 		"server": "ts-node server.tsx",
 		"test": "eslint 'src' --ext ts,tsx && tsc"
@@ -12,18 +12,19 @@
 	"repository": {},
 	"license": "UNLICENSED",
 	"dependencies": {
-		"@remotion/bundler": "^1.5.3",
-		"@remotion/cli": "^1.5.3",
-		"@remotion/eslint-config": "^1.5.0",
-		"@remotion/renderer": "^1.5.3",
+		"@remotion/bundler": "^2.0.0",
+		"@remotion/cli": "^2.0.0",
+		"@remotion/eslint-config": "^2.0.0",
+		"@remotion/renderer": "^2.0.0",
 		"@types/express": "^4.17.9",
 		"@types/react": "^17.0.0",
 		"eslint": "^7.15.0",
 		"express": "^4.17.1",
 		"prettier": "^2.2.1",
 		"prettier-plugin-organize-imports": "^1.1.1",
-		"react": "^17.0.1",
-		"remotion": "^1.5.3",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"remotion": "^2.0.0",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.3"
 	}
