--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "puppeteer": "^7.1.0",
-    "readline-sync": "^1.4.10"
-  }
+    "minimist": "^1.2.5",
+    "puppeteer": "^7.1.0"
+  },
+  "devDependencies": {}
 }
