--- a/.github/workflows/render-video.yml
+++ b/.github/workflows/render-video.yml
@@ -36,7 +36,7 @@ jobs:
           WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
 
       - run: npm install
-      - run: npm start -- --firstPlayerUrl="github.event.inputs.firstPlayerUrl" --secondPlayerUrl="github.event.inputs.secondPlayerUrl"
+      - run: npm start -- --firstPlayerUrl=github.event.inputs.firstPlayerUrl --secondPlayerUrl=github.event.inputs.secondPlayerUrl
       - uses: actions/upload-artifact@v2
         with:
           name: out.mp4
