--- a/.github/workflows/render-video.yml
+++ b/.github/workflows/render-video.yml
@@ -29,14 +29,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-
       - run: sudo apt update
       - run: sudo apt install ffmpeg
-        env:
-          WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
-
       - run: npm install
-      - run: npm start -- --firstPlayerUrl=github.event.inputs.firstPlayerUrl --secondPlayerUrl=github.event.inputs.secondPlayerUrl
+      - run: npm start -- --firstPlayerUrl="${{github.event.inputs.firstPlayerUrl}}" --secondPlayerUrl="${{github.event.inputs.secondPlayerUrl}}"
       - uses: actions/upload-artifact@v2
         with:
           name: out.mp4
